--- a/templates/hoidap/css/nature.css
+++ b/templates/hoidap/css/nature.css
@@ -1423,7 +1423,7 @@ body.wrapper-theme2 {
 }
 
 body.wrapper-theme3 {
-	background: url(../images/bg/bg3.jpg) #62B1D8 no-repeat fixed center top;
+	background: url(../images/bg_beach.jpg) #f6f6f6 no-repeat fixed center top;
 }
 
 body.wrapper-theme4 {
