--- a/administrator/components/com_qa/models/forms/tip.xml
+++ b/administrator/components/com_qa/models/forms/tip.xml
@@ -8,8 +8,7 @@
 			label="JGLOBAL_FIELD_ID_LABEL" 	description ="JGLOBAL_FIELD_ID_DESC" />
 
 		<field name="title" type="text" class="inputbox"
-			size="40" label="COM_QA_FIELD_TITLE_LABEL"
-			description="COM_QA_FIELD_TITLE_DESC" required="true" />
+			size="40" label="Title" required="true" />
 
 		<field name="alias" type="text" class="inputbox"
 			size="40" label="JFIELD_ALIAS_LABEL"
